--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -35,8 +35,8 @@
   }
 
   .content__cards {
+    justify-content: center;
     flex-wrap: wrap;
-    row-gap: 30px;
   }
 
   .center__title {
